--- a/flaskr/static/css/src/style.css
+++ b/flaskr/static/css/src/style.css
@@ -206,10 +206,10 @@
     }
     /* form */
     .form-style {
-        @apply w-3/4 sm:w-2/3 text-gray-700;
+        @apply w-3/4 sm:w-2/3;
     }
     .input-form {
-        @apply h-10 w-full bg-white bg-opacity-50 hover:bg-opacity-90 focus:bg-opacity-90 text-gray-500 focus:outline-none rounded-full shadow duration-300 text-sm sm:text-base py-1 sm:py-2 px-2 sm:px-4;
+        @apply h-10 w-full font-josefin bg-white bg-opacity-50 hover:bg-opacity-90 focus:bg-opacity-90 text-gray-500 focus:outline-none rounded-full shadow duration-300 text-sm sm:text-base py-1 sm:py-2 px-2 sm:px-4;
     }
     /* transform */
     .transform-scale {
