added test user info

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -3,12 +3,13 @@
 <head prefix="og:http://ogp.me/ns#">
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="theme-color" content="#ffffff">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="author" content="Ayumi Tanaka">
     <meta name="generator" content="Visual Studio Code">
     <meta name="description" content="Go on a Journey, Write a Journal.">
-    <meta name="keywords" content="journey, journal, journaly">
-    <meta name="author" content="Ayumi Tanaka">
+    <meta name="keywords" content="journey, journal, journaly, Ayumi Tanaka">
     <!-- OGP -->
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Journaly"/>
@@ -44,7 +45,6 @@
     <link rel="manifest" href="/static/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/static/favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
     <!-- Title -->
     <title>Journaly</title>
 </head>
