--- a/flaskr/templates/login/login.html
+++ b/flaskr/templates/login/login.html
@@ -22,6 +22,8 @@
                     <h6 class="mt-4 lg:mt-8">
                         {{form.submit(class="btn-lightorange")}}
                     </h6>
+                    <p class="mt-2 lg:mt-4">If you want to just try it out, you can use test user.</p>
+                    <p>Mail : amy@mail.com / Password : 12341234</p>
                 </form>
             </div>
         </div>
