--- a/flaskr/templates/signup/signup.html
+++ b/flaskr/templates/signup/signup.html
@@ -28,6 +28,7 @@
                     <h6 class="mt-4 lg:mt-8">
                         {{form.submit(class="btn-lightorange")}}
                     </h6>
+                    <p class="mt-2 lg:mt-4">If you want to just try it out, you can use test user. Please skip Sign up and go to Login.</p>
                 </form>
             </div>
         </div>
